--- a/css/board.css
+++ b/css/board.css
@@ -7,7 +7,7 @@
 /* Rules for the game board */
 #board{
     /*Colors*/
-    background-color: navy;
+    background-color: rgb(255, 255, 255);
 
     /*Sizing*/
     height: 100%;
